# VIP-python-client

./: .gitignore  .gitmodules  LICENSE.txt  README.md  VipCI.py  VipLauncher.py  VipSession.py  certif.crt  environment.yaml  environment.yml  postBuild  pyproject.toml  repro-brats.ipynb  requirements.txt  setup.py  test.py  test_MyVipSession.py  test_VipCI.py  test_VipLauncher.py  vip.py
.github/workflows/: main.yml
binder/: README.md  environment.yml  postBuild
doc/: README.md  account.md  history.md  pypi.md  source.md  vipsession.md
docs/: pypi.md
example/: README.md
example/freesurfer/: README.md  freesurfer-args.json  freesurfer-recon-all.sh
examples/: README.md  environment.yml  run-cquest.ipynb  vip-cli.py
examples/CI/: exemple_VipCI.ipynb
examples/Tutorial/: README.md  Tutorial.ipynb  VipCI.py  VipLauncher.py  VipSession.py
examples/Tutorial/data/: Tutorial.ipynb
examples/Tutorial/data/lcmodel_sample/: Basis_117T.basis
examples/Tutorial/data/lcmodel_sample/signals/: Rec001.RAW  Rec002.RAW
examples/Tutorial/data/quest_1job/: parameters.txt
examples/bruker_preprocessing/: environment.yml  preprocess.ipynb
examples/bruker_preprocessing/binder/: environment.yml
examples/cquest/: example_VipCI.py  requirements.txt
examples/data/lcmodel_sample/parameters/: fit_117T_A.control
examples/data/quest_sample/parameters/: A.txt
examples/freesurfer/: freesurfer-recon-all.sh  vip-cli.py
examples/lcmodel/: launch_lcmodel.ipynb
examples/repro-brats/: 1-launch-application.ipynb  1-launch-executions.ipynb  2-analyze-outputs.ipynb  2-our-results.ipynb  3-your-results.ipynb  README.md  repro-brats.ipynb
examples/repro-brats/src/: VipClient.py  VipLoader.py
examples/tutorial/data/signals/: 002.mrui
examples/tutorials/: demo-multiple-sessions.py  demo-vipsession.ipynb  exemple_VipCI.ipynb
examples/tutorials/data/signals/: 001.mrui
src/: README.md  VipCI.py  VipClient.py  VipLauncher.py  VipLoader.py  VipSession.py  __init__.py  vip.py
src/vip-python-client/: __init__.py
src/vip_client/: VipCI.py  VipLauncher.py  VipSession.py  __init__.py
src/vip_client/classes/: VipCI.py  VipClient.py  VipLauncher.py  VipLoader.py  VipSession.py  __init__.py
src/vip_client/utils/: __init__.py  vip.py
tests/: README.md  __init__.py  test_VipLauncher.py  test_VipSession.py  try_viploader.py
vip_outputs/test-lcmodel/: session_data.json
vip_outputs/test-lcmodel/22-03-2023_12:06:13/Rec001.RAW--fit_117T_A.control.tgz/: result.coord  result.dump  result.ps  result.table
vip_outputs/test-lcmodel/22-03-2023_12:06:13/Rec002.RAW--fit_117T_A.control.tgz/: result.coord  result.dump  result.ps  result.table
vip_python_client/: VipCI.py  VipLauncher.py  VipSession.py
