[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vip-client"
version = "0.0.1"
description = "Python client to use the Virtual Imaging Platform (VIP) through its RESTful API."
authors = [
  { name="Gaël Vila", email="gael.vila@creatis.insa-lyon.fr" },
]
maintainers = [
  { name="Gaël Vila", email="gael.vila@creatis.insa-lyon.fr" },
  { name="Axel Bonnet", email="axel.@creatis.insa-lyon.fr" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha", 
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: CeCILL-B Free Software License Agreement (CECILL-B)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
]
dependencies = ["requests"]

[tool.hatch.build]
only-packages = true

[project.urls]
Homepage = "https://vip.creatis.insa-lyon.fr"
Source = "https://github.com/virtual-imaging-platform/VIP-python-client"
Tracker = "https://github.com/virtual-imaging-platform/VIP-python-client/issues"
